--- a/LanguageLearningApp/LanguageLearningApp.csproj
+++ b/LanguageLearningApp/LanguageLearningApp.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LanguageLearning\LanguageLearning.csproj" />
+  </ItemGroup>
+
 </Project>
