Final version of the code for the website

--- a/LanguageLearningApp/LanguageLearningApp.csproj
+++ b/LanguageLearningApp/LanguageLearningApp.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LanguageLearningDAL\Data.csproj" />
     <ProjectReference Include="..\LanguageLearningLogic\LanguageLearningLogic.csproj" />
-    <ProjectReference Include="..\LanguageLearning\LanguageLearning.csproj" />
   </ItemGroup>
 
 </Project>
